Push spacing fixes
Push spacing fixes

--- a/_patterns/projectphase/projectphase.css
+++ b/_patterns/projectphase/projectphase.css
@@ -54,6 +54,13 @@
   padding-top: 1em;
 }
 
+.personalprojectstitle {
+  color: var(--color-primary-mid-grey);
+  font-weight: 300;
+  padding-left: 1.5em;
+  padding-top: .2em;
+}
+
 .introsubtitleinline {
   display: inline;
 }
